--- a/index.html
+++ b/index.html
@@ -1,7 +1,100 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ 
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+ 
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+ 
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+ 
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+ 
+
+.topnav .icon {
+  display: none;
+}
+
+ 
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+ 
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+</style>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+ 
+
+<div class="topnav" id="myTopnav">
+  <a href="IBM.html" class="active">Home</a>
+  <a href="news.html">News</a>
+  <a href="About.html">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+<div style="padding-left:16px">
+<iframe src='https://who.sprinklr.com/' frameborder='0' scrolling='no' style='width:100%;height:600px;'></iframe>
+</div>
+<script src="https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js"></script>
+<script>
+  window.loadWatsonAssistantChat({
+    integrationID: "4fbc2bfc-b44a-41ec-a825-2b39280f6e80", // The ID of this integration.
+    region: "us-south" // The region your integration is hosted in.
+  }).then(function(instance){
+    instance.render();
+  });
+</script></body>
 </html>
